# swagger-2.yaml
@@ -60,19 +60,16 @@ paths:
               msg:
                 type: string
                 description: 登录结果信息
-        401:
-          description: 用户名或密码错误
+        400:
+          description: 出现错误
           schema:
             type: object
             properties:
               msg:
                 type: string
-   #   security:
-    #    - petstore_auth:
-     #       - 'write:pets'
-      #      - 'read:pets'
+
       
-  /day/requirement/history:
+  /day/requirement/history/:
     get:
       tags:
         - day
@@ -129,10 +126,7 @@ paths:
               msg:
                 type: string
             
-   #   security:
-    #    - petstore_auth:
-     #       - 'write:pets'
-      #      - 'read:pets'
+
   /day/requirement/view/:
     get:
       tags:
@@ -188,7 +182,7 @@ paths:
               msg:
                 type: string
       
-  /night/secret/history:
+  /night/secret/history/:
     get:
       tags:
         - night
@@ -229,7 +223,7 @@ paths:
               msg:
                 type: string
                 
-  /night/coment/history:
+  /night/coment/history/:
     get:
       tags:
         - night
@@ -271,7 +265,7 @@ paths:
                 type: string  
   
     
-  /day/remind/infomation:
+  /day/remind/infomation/:
     get:
       tags:
         - day
@@ -320,7 +314,7 @@ paths:
               msg:
                 type: string
   
-  /day/reminds:
+  /day/remind/:
     get:
       tags:
         - day
@@ -369,7 +363,7 @@ paths:
               msg:
                 type: string
   
-  /day/message/confine:
+  /day/message/confine/:
     post:
       tags:
         - day
@@ -483,7 +477,7 @@ paths:
               msg:
                 type: string
 
-  /user/homepage/:
+  /user/info/:
     get:
       tags:
         - user
@@ -511,8 +505,15 @@ paths:
               College:
                 type: string
               Gender:
-                type: integer
-              ContactWay:
+                type: string
+              Grade:
+                type: string
+        400:
+          description: 错误
+          schema:
+            type: object
+            properties:
+              msg:
                 type: string
         401:
           description: 身份认证错误
@@ -522,7 +523,7 @@ paths:
               msg:
                 type: string
                 
-  /night/remind/exist/:
+  /night/remind/unread/:
     get:
       tags:
         - night
@@ -542,7 +543,7 @@ paths:
               existence:
                 type: boolean
         400:
-          description: 参数不全
+          description: 错误
           schema:
             type: object
             properties:
@@ -556,7 +557,7 @@ paths:
               msg:
                 type: string
                       
-  /night/remind/content:
+  /night/remind/:
     get:
       tags:
         - night
@@ -639,7 +640,7 @@ paths:
               msg:
                 type: string
                 
-  /night/secret/create:
+  /night/secret/create/:
     post:
       tags:
         - night
@@ -688,7 +689,7 @@ paths:
                 type: string
 
 
-  /night/comment/create:
+  /night/comment/create/:
     post:
       tags:
         - night
@@ -739,7 +740,7 @@ paths:
                 type: string
                 
   
-  /night/secret:
+  /night/secret/:
     delete:
       tags:
         - night
@@ -784,7 +785,7 @@ paths:
               msg:
                 type: string
  
-  /night/comment:
+  /night/comment/:
     delete:
       tags:
         - night
@@ -829,7 +830,7 @@ paths:
               msg:
                 type: string
  
-  /day/requirement/create:
+  /day/requirement/create/:
     post:
       tags:
         - day
@@ -899,7 +900,7 @@ paths:
                 type: string
 
 
-  /day/remind/exist:
+  /day/remind/unread/:
     get:
       tags:
         - day
@@ -935,7 +936,7 @@ paths:
                 type: string
        
                 
-  /day/requirementsSquare:
+  /day/requirementsSquare/:
     get:
       tags:
         - day
@@ -1010,7 +1011,7 @@ paths:
               msg:
                 type: string
 
-  /day/requirements:
+  /day/requirements/:
     delete:
       tags:
         - day
@@ -1057,13 +1058,12 @@ paths:
               msg:
                 type: string
 
- 
-                
-  /night:
+            #别人发布的秘密           
+  /night/:
     get:
       tags:
         - night
-      summary: 别人发布秘密 
+      summary: 黑夜广场　
       description: secrets
       consumes:
         - application/json
@@ -1074,6 +1074,9 @@ paths:
           in: header
           required: true
           type: string 
+        - name: page
+          in: query
+          type: integer
       responses:
         200:
           description: successful operation
@@ -1082,12 +1085,60 @@ paths:
             properties:
               msg:
                 type: string
-              history:
+              secrets:
                 type: array
                 items:
                   properties:
-                    secretId :
+                    secretId:
                       type: string  #不显示
+                    colour:
+                      type: integer
+                    content:
+                      type: string
+                    sendTime:
+                      type: string
+        401:
+          description: 身份认证错误
+          schema:
+            type: object
+            properties:
+              msg:
+                type: string
+                
+  /night/secret/content/:
+    get:
+      tags:
+        - night
+      summary: 秘密相关信息　
+      description: secrets
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: token
+          in: header
+          required: true
+          type: string 
+        - name: secretId
+          in: query
+          type: string
+      responses:
+        200:
+          description: successful operation
+          schema:
+            type: object
+            properties:
+              msg:
+                type: string
+              Colour:
+                type: integer
+              comment:
+                type: array
+                items:
+                  properties:
+                    portrait:
+                      type: integer
                     content:
                       type: string
                     sendTime:
